# nu_plugin_query_git

./: Cargo.toml  README.md
src/: gitql_data_provider.rs  gitql_functions.rs  gitql_schema.rs  main.rs  nushell_render.rs  query_git.rs
