[package]
name = "nu_plugin_query_git"
version = "0.22.0"
authors = ["Darren Schroeder <343840+fdncred@users.noreply.github.com>"]
edition = "2024"
repository = "https://github.com/fdncred/nu_plugin_query_git"
description = "a nushell plugin called query_git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# nushell dependencies
nu-plugin = "0.112.2"
nu-protocol = "0.112.2"
nu-path = "0.112.2"

chrono = "0.4.44"
csv = "1.4.0"
serde_yaml = "0.9.34"
gitql-ast = "0.39.0"
gitql-cli = "0.43.0"
gitql-core = "0.20.0"
gitql-engine = "0.43.0"
gitql-parser = "0.42.0"
gitql-std = "0.20.0"
gix = "0.83.0"
serde_json = "1.0.149"

# for local development, you can use a path dependency
# nu-plugin = { version = "0.99.0", path = "../nushell/crates/nu-plugin" }
# nu-protocol = { path = "../nushell/crates/nu-protocol", features = ["plugin"], version = "0.99.0" }
# nu-path =  { version = "0.99.0", path = "../nushell/crates/nu-path" }

[dev-dependencies]
nu-plugin-test-support =  "0.112.2"
tempfile = "3.6.0"
# nu-plugin-test-support = { path = "../nushell/crates/nu-plugin-test-support" }

[profile.release]
opt-level = "s"     # Optimize for size
strip = "debuginfo"
lto = "thin"

[profile.dev]
opt-level = 0

# To use a development version of a dependency please use a global override here
# changing versions in each sub-crate of the workspace is tedious
[patch.crates-io]
# gitql-ast = { git = "https://github.com/AmrDeveloper/GQL/", branch = "master" }
# gitql-cli = { git = "https://github.com/AmrDeveloper/GQL/", branch = "master" }
# gitql-core = { git = "https://github.com/AmrDeveloper/GQL/", branch = "master" }
# gitql-engine = { git = "https://github.com/AmrDeveloper/GQL/", branch = "master" }
# gitql-parser = { git = "https://github.com/AmrDeveloper/GQL/", branch = "master" }
# gitql-std = { git = "https://github.com/AmrDeveloper/GQL/", branch = "master" }
